karnc/tests/fixtures/positive/189_karn_node_platform/src/ids/gen.karn
context ids.gen

consumes karn { Clock, Secrets }

service stamp {
  on call() -> Effect[Int] given Clock, Secrets {
    let salt <- Secrets.get("STAMP_SALT")
    let now <- Clock.now()
    match salt {
      Some(_) => now + 1,
      None => now,
    }
  }
}
