karnc/tests/fixtures/negative/135_integration_unwired_dependency/src/app/cons.karn
context app.cons
consumes app.dep as Dep
service run {
  on call() -> Effect[Result[Int, DErr]] {
    let r <- Dep.work()
    r
  }
}
